styles/action-board-styles.css
.arrow-button {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  margin: 35px;
  margin-left: 10px;
  margin-right: 10px;
  height: 70px;
  width: 70px;
  border-radius: 50%;
  background-color: rgb(253, 213, 183);
  cursor: pointer;
  opacity: 0.6;
  transition: 0.5s;
}

.arrow-button:hover {
  opacity: 1;
  height: 80px;
  width: 80px;
  transition: 0.5s;
  border: 2px solid rgb(20, 19, 19);
}



.arrow-button-style {
  height: 70px;
}

.main {
  display: flex;
  flex-direction: column;
  margin: 0px;
  justify-content: center;
}

.main-top {
  display: flex;
  flex-direction: column;
  justify-content: start;
  z-index: 1;
}

.top-section {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 5px;
  margin-left: 25px;
}

.main-middle {
  margin-top: -2px;
  margin-bottom: 5px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.title {
  display: flex;
  justify-content: start;
  align-items: start;
  margin-left: 10px;
  margin-top: 50px;
  height: 40px;
}


.page-title {
  display:flex ;
  align-items: center;
  justify-content: center;
  background-color: rgb(0, 0, 0);
  margin-top: 8px;
  font-size: 20px;
  width: 200px;
  height: 30px;
  color: rgb(217, 190, 128);
  border: 1px solid goldenrod;
  border-radius: 10px;
  cursor: default;
}

.header-right {
  margin-left: 5%; 
}

.header-middle {
  margin-left: 36%;
  margin-right: 36%;
}

.header-left {
  margin-left: -6%;
}

.icon-button-style {
  height: 30px;
  width: 30px;
}

.icon-button-play {
  height: 20px;
  width: 20px;
}

.figures {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2px 1px;
  background-color:rgb(60, 42, 16);
  border: 2px solid rgb(131, 77, 8);
  height: 87px;
  width: 97%;
  border-radius: 18px;
}




.action-square {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-image: url('../images/pngtree-vintage-egyptian-hieroglyph-seamless-pattern-retro-vector-illustration-of-ancient-egypt-symbols-repeated-vector-png-image_39381462.jpg');
  margin-right: 2px;
  margin-bottom: 4px;
  border-radius: 25px;
}

.action-board {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title {
  display: flex; 
  color: white;
  margin-top: -20px;
  font-size: 12px;
}


.icon-items {
  display: flex;
  align-items: center;
  margin-right: 7px;
  margin-left: 7px;
  margin-bottom: 7px
}

.title-image {
  height: 10px;
  margin-bottom: 5px;
  background-image: url('../images/pngtree-vintage-egyptian-hieroglyph-seamless-pattern-retro-vector-illustration-of-ancient-egypt-symbols-repeated-vector-png-image_39381462.jpg');
  opacity: 0.3;
  border: 2px solid black;
  border-radius: 50px;
  width: 98%;
}

.icon-button:hover {
  opacity: 1;
  border: 4px solid goldenrod;
}

.icon-button-last:hover {
  opacity: 1;
  border: 5px solid goldenrod;
}

.icon-button,
.icon-button-last {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0px;
  height: 45px;
  width: 45px;
  margin-top: -10px;
  margin-right: 7px;
  margin-left: 15px;
  border-radius: 50%;
  cursor: pointer;
  opacity: 0.3;
  transition: 0.5s;
}

.icon-button {
  background-color: black;
  transition: 0.5s;
}

.icon-button-last {
  height: 62px;
  width: 62px;
  background-color: rgb(255, 255, 255);
  border: 3px solid rgb(240, 140, 82);
  margin-bottom: 4px;
  transition: 0.5s;
}


.icon-button-style {
 padding: 0px;
 margin-left: 2px;
}

.icon-button-play {
  margin-bottom: 10px;
}

.icon-button-MF {
  border: 2px solid rgb(20, 33, 155);
}

.icon-button-SF {
  border: 2px solid rgb(167, 8, 8);
}

.icon-button-GF {
  border: 2px solid rgb(22, 92, 47);
}

.icon-button-UAP {
  border: 2px solid rgb(240, 140, 82);
  height: 58px;
  width: 58px;
}

.last-UAP {
  height: 62px;
  width: 62px;
}




.action-board-container,
.event-board-container,
.devotion-board-container {
  display: none;
}

.action-board-container {
  display: flex;
  flex-direction: column; 
}

.event-board-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding: 45px;
  padding-top: 10px;
  background-color: rgb(158, 148, 136);
  width: 600px;
  height: 280px;
  border: 2px solid rgb(117, 66, 4);
  border-radius: 160px;
}

.hidden {
  display: none;
}

.event-button {
  padding: 10px;
  margin: 12px 18px;
  margin-top: 10px;
  border-radius: 50%;
  background-color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  opacity: 0.1;
  transition: 0.5s;
}

.event-button:hover {
  opacity: 1;
  padding: 12px;
  transition: 0.5s;
}

.devotion-button {
  padding: 10px;
  margin: 12px 18px;
  margin-top: 10px;
  border-radius: 50%;
  background-color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  opacity: 0.1;
  transition: 0.5s;
}

.devotion-button:hover {
  opacity: 1;
  padding: 12px;
  transition: 0.5s;
}

.event-button-first {
  background-color: rgb(242, 228, 190);
  border: 3px solid goldenrod;
  opacity: 1;
}

.event-button-camel {
  border: 3px solid rgb(16, 29, 145);
}

.event-button-fan {
  border: 3px solid rgb(148, 7, 7);
}

.event-button-pyramid {
  border: 3px solid gold;
}

.icon-button-play-event {
  height: 15px;
}

.arrow-last {
  display: none;
}

.icon-button-play-UAP,
.icon-button-play-MF,
.icon-button-play-SF,
.icon-button-play-GF {
  display: none;
}


.on {
  opacity: 1;
}

.reset,
.undo{
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: black;
  height: 30px;
  width: 80px;
  margin-top: 10px;
  margin-left: 5px;
  margin-right: 5px;
  border-radius: 50%;
  cursor: pointer;
}

.reset {
  margin-right: 25px;
}

.reset-button,
.undo-button {
  display: flex;
  align-items: center;
  justify-content: center;
  color: bisque;
  padding-top: 3px;
  height: 30px;
  width: 80px;
  border: 1px solid goldenrod;
  border-radius: 10px;
  border-bottom: none;
  border: 1px solid rgb(220, 220, 220);
  background-color: rgb(78, 60, 14);
  cursor: pointer;
  transition: 0.5s;
}

.reset-button:hover,
.undo-button:hover {
  height: 23px;
  width: 78px;
  font-size: 14px;
  background-color: wheat;
  border: 2px solid rgb(234, 59, 15);
  border-bottom: none;
  color: rgb(217, 10, 10);
  transition: 0.5s;
}

.start-board {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 26px;
  font-weight: bolder;
  align-items: center;
  height: 385px;
  width: 600px;
  background-color: rgb(84, 70, 38);
  color: white;
  border: 1px solid rgb(246, 221, 156);
  border-radius: 20px;
}


.devotion-board-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: rgb(158, 148, 136);
  width: 900px;
  height: 150px;
  border: 1px solid rgb(117, 66, 4);
  border-radius: 10px;
  overflow: scroll;
  overflow-y: hidden;
}


.devotion-board-container::-webkit-scrollbar {
  width: auto;  
  height: 10px; 
}

.devotion-board-container::-webkit-scrollbar-track {
  background: #b98b1f4d;
  border-radius: 50px; 
}

.devotion-board-container::-webkit-scrollbar-thumb {
  background: #413108; 
  border-radius: 50px; 
  border: 1px solid wheat;
}

.devotion-board-container::-webkit-scrollbar-horizontal {
  height: 10px; 
}

.main-bottom {
  display: flex;
  align-items: center;
  justify-content: center;
}

.bottom-arrow-section {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border: 1px solid rgb(246, 221, 156);
  width: 550px;
  height: 130px;
  background-color: rgb(58, 39, 6);
  border-radius: 15px;
}

.bottom-arrow-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.bottom-player-selector {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  background-color: rgb(93, 83, 66);
  height: 100px;
  padding: 5px 20px;
  margin: 5px;
  border-radius: 7px;
  margin: 5px;
  font-size: 15px;
  color: white;
  border: 1px solid rgb(209, 179, 137);
}

.devotion-register-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgb(93, 83, 66);
  height: 100px;
  width: 25%;
  padding: 5px 20px;
  margin: 5px;
  border-radius: 7px;
  margin: 5px;
  font-size: 15px;
  color: white;
  border: 1px solid rgb(209, 179, 137);
}

.player-choose {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.player-amount-chooser {
  display: flex;
  height: 55px;
  width: 55px;
  background-color: rgb(255, 255, 255, 0.7);
  border: 2px solid goldenrod;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
  margin: 2px;
  transition: 0.5s;
}

.chooser-image {
  height: 40px;
}

.player-choose-buttons {
  margin-top: 10px;
  display: flex;
  flex-direction: row;
}

.chooser-section-top {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content:center;
  width: 100%;
}

.info-img {
  width: 15px;
  height: 15px;
}

.title-section {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 95%;
  padding-left: 30px;
  cursor:default;
}

.info-section {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 25px;
  height: 25px;
  cursor: pointer;
}

.player-amount-chooser:hover {
  cursor: pointer;
  transition: 0.5s;
  background-color: rgb(0, 0, 0, 0.7);
}

.devotion-input {
  text-align: center;
  border-radius: 20px;
  border: 2px solid rgb(215, 175, 74);
  background-color: rgb(213, 207, 207);
  color: rgb(203, 84, 20);
  font-size: 20px;
  width: 60%;
  padding: 10px;
  margin-bottom: 5px;
  outline-color: #c25a0a;
  transition: 0.5s;
}

.decrease,
.increase {
  margin-top: 5px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  font-size: 30px;
  text-align: center;
  border: 2px solid silver;
  color: wheat;
  cursor: pointer;
}

.decrease {
  background-color: rgb(120, 22, 22);
}

.increase {
  background-color: green;
}

.board-switch-section {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
}

.board-switcher-button {
  display: flex;
  align-items: center;
  justify-content: center;
  color: bisque;
  margin:3px;
  padding: 20px;
  height: 50px;
  width: auto;
  border: 1px solid goldenrod;
  border-radius: 10px;
  border-bottom: none;
  border: 1px solid rgb(220, 220, 220);
  background-color: rgb(65, 55, 31);
  cursor: pointer;
  transition: 0.2s;
}

.board-switcher-button:hover {
  height: 45px;
  width: auto;
  border: 2px solid rgb(183, 137, 20);
  background-color: #4f2b0f;
  transition: 0.2s;
}

.mobile-warning  {
  display: none;
}

@media (max-width: 768px) {
  .mobile-warning {
    display:inherit;
  }
  .main {
    display: none;
  }

  .header-container{
    width: auto;
  }
  
  .header-right {
    display: none;
  }

  .blur {
    height: 100%;
  }
}

